--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: none #update  # or `create`, `create-drop`, `validate`, `none`
+      ddl-auto: update #update  # or `create`, `create-drop`, `validate`, `none`
     show-sql: true
 
 
